crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__yield__star_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/yield/star_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..67,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 37..47,
                    value: Yield(
                        ExprYield {
                            node_index: NodeIndex(None),
                            range: 37..47,
                            value: Some(
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 44..46,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 45..46,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 49..66,
                    value: Yield(
                        ExprYield {
                            node_index: NodeIndex(None),
                            range: 49..66,
                            value: Some(
                                Tuple(
                                    ExprTuple {
                                        node_index: NodeIndex(None),
                                        range: 55..66,
                                        elts: [
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(None),
                                                    range: 55..63,
                                                    value: BoolOp(
                                                        ExprBoolOp {
                                                            node_index: NodeIndex(None),
                                                            range: 56..63,
                                                            op: And,
                                                            values: [
                                                                Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 56..57,
                                                                        id: Name("x"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 62..63,
                                                                        id: Name("y"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                            ],
                                                            runtime_values: None,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 65..66,
                                                    id: Name("z"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                        parenthesized: false,
                                        runtime_elts: None,
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | # Cannot use starred expression here
2 | yield (*x)
  |        ^^ Syntax Error: invalid syntax
3 |
4 | yield *x and y, z
  |


  |
2 | yield (*x)
3 |
4 | yield *x and y, z
  |        ^^^^^^^ Syntax Error: boolean expression cannot be used here


## Semantic Syntax Errors

  |
1 | # Cannot use starred expression here
2 | yield (*x)
  |        ^^ Syntax Error: Starred expression cannot be used here
3 |
4 | yield *x and y, z
  |
